spring-petclinic-admin-server/.tanzu/config/httproute-spring-petclinic-admin-server.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/spring-petclinic-admin-server
  name: spring-petclinic-admin-server-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: spring-petclinic-admin-server
  rules:
  - backendRefs:
    - kind: Service
      name: spring-petclinic-admin-server
      port: 9090
